Fix tours on mobile and add new video

--- a/src/styles/components/_tables.scss
+++ b/src/styles/components/_tables.scss
@@ -87,7 +87,12 @@ span.month{
 */
 
 /* header show offcanvas */
-@media only screen and (max-width:900px) {  
+@media only screen and (max-width:900px) {
+    table{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
     table tr{
     
         .location{
@@ -100,6 +105,28 @@ span.month{
         span.day{
             font-size: 3em;
             margin-right: 1rem;
+        }
+
+        .date span{
+            display: inline-block;
+        }
+
+        td{
+            border: none;
+            width: 100%;
+            display: block;
+            padding-top: 0px;
+            padding-bottom: 0px;
+            text-align: center;
+            border-bottom: 0px!important;         
+            
+            &:first-child{
+                padding-top: 2rem;
+            }
+            &.subject.ticket{
+                padding-bottom: 2rem;
+                border-bottom: 1px solid #ffed00!important;
+            }
         }
     }
     .c-video{
